# jupyter_notebooks

avp_scraper/: pyproject.toml
avp_scraper/jupyter_notebooks/: selenium.ipynb
